--- a/backend/django_backend/accounts/templates/home/index.html
+++ b/backend/django_backend/accounts/templates/home/index.html
@@ -6,18 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home - Dashboards</title>
     <link rel="stylesheet" href="{% static 'styleHome.css' %}">
-
 </head>
 <body>
     <div class="sidebar">
         <h2>Menu</h2>
         <ul>
-            <li><a href="#">Início</a></li>
-            <li><a href="#">Dashboards</a></li>
-            <li><a href="#">Relatórios</a></li>
-            <li><a href="#">Configurações</a></li>
-            <li><a href="#">Sair</a></li>
+            <li><strong>Nome:</strong> {{ user.firstName }} {{ user.lastName }}</li>
+            <li><strong>E-mail:</strong> {{ user.email }}</li>
         </ul>
+        <form method="POST">
+            {% csrf_token %}
+            <ul>
+                <li>
+                    <button name="logout" id="logout" type="submit" class="form-button">Sair</button>
+                </li>
+            </ul>
+        </form>
     </div>
 
     <div class="main-content">
@@ -29,16 +33,30 @@
                 <h2>Dashboards</h2>
                 <div class="dashboard-container">
                     <div class="dashboard-item">
-                        <h3>Dashboard 1</h3>
-                        <p>Descrição do Dashboard 1.</p>
+                        <iframe
+                            src="http://localhost:3000/public/question/5f1517d2-b766-4f91-939d-8bb9489c603d"
+                            frameborder="0"
+                            height="100%"
+                            allowtransparency
+                        ></iframe>
                     </div>
-                    <div class="dashboard-item">
-                        <h3>Dashboard 2</h3>
-                        <p>Descrição do Dashboard 2.</p>
-                    </div>
-                    <div class="dashboard-item">
-                        <h3>Dashboard 3</h3>
-                        <p>Descrição do Dashboard 3.</p>
+                    <div class="dashboard-block">
+                        <div class="dashboard-item">
+                            <iframe
+                                src="http://localhost:3000/public/question/ded4f294-ab4e-4311-82e3-a5ee5ef0455a"
+                                frameborder="0"
+                                height="100%"
+                                allowtransparency
+                            ></iframe>
+                        </div>
+                        <div class="dashboard-item">
+                            <iframe
+                                src="http://localhost:3000/public/question/ee7d3c51-1672-42aa-bdc1-e46ba8e8c79a"
+                                frameborder="0"
+                                height="100%"
+                                allowtransparency
+                            ></iframe>
+                        </div>    
                     </div>
                 </div>
             </section>
@@ -49,3 +67,4 @@
     </div>
 </body>
 </html>
+
