--- a/backend/django_backend/accounts/templates/register/index.html
+++ b/backend/django_backend/accounts/templates/register/index.html
@@ -13,8 +13,12 @@
         <form method="post">
             {% csrf_token %}
             <div>
-                <label for="userName">Username:</label>
-                <input type="text" id="userName" name="userName" required>
+                <label for="First_Name">First Name:</label>
+                <input type="text" id="firstName" name="firstName" required>
+            </div>
+            <div>
+                <label for="last_Name">Last Name:</label>
+                <input type="text" id="lastName" name="lastName" required>
             </div>
             <div>
                 <label for="email">Email:</label>
