feat: Adicionando script para criação automática de dashboards.

--- a/backend/django_backend/accounts/templates/home/index.html
+++ b/backend/django_backend/accounts/templates/home/index.html
@@ -34,7 +34,7 @@
                 <div class="dashboard-container">
                     <div class="dashboard-item">
                         <iframe
-                            src="http://localhost:3000/public/question/e320df40-0f00-4c54-8513-38e81dea0bef"
+                            src="{{ dashboard_urls.Tráfego_diário }}"
                             frameborder="0"
                             height="100%"
                             allowtransparency
@@ -43,7 +43,7 @@
                     <div class="dashboard-block">
                         <div class="dashboard-item">
                             <iframe
-                                src="http://localhost:3000/public/question/c9df9a2e-118c-4357-8603-b64c49dbdfae"
+                                src="{{ dashboard_urls.Tempo_logado }}"
                                 frameborder="0"
                                 height="100%"
                                 allowtransparency
@@ -51,7 +51,7 @@
                         </div>
                         <div class="dashboard-item">
                             <iframe
-                                src="http://localhost:3000/public/question/2ec99068-8de3-4db9-a333-9c74d275caab"
+                                src="{{ dashboard_urls.Posts_por_categoria }}"
                                 frameborder="0"
                                 height="100%"
                                 allowtransparency
