fix: Corrigindo erro no dashboard de tempo de uso.

--- a/backend/django_backend/accounts/templates/home/index.html
+++ b/backend/django_backend/accounts/templates/home/index.html
@@ -41,7 +41,7 @@
                 <h2>Dashboards</h2>
                 <div class="dashboard-container">
                     <div class="dashboard-item dashboard-main">
-                        <iframe src="{{ dashboard_urls.Tempo_logado }}"></iframe>
+                        <iframe src="{{ dashboard_urls.Tempo_logado }}" width="100%" height="600" frameborder="0" ></iframe>
                     </div>
                     <div class="dashboard-item dashboard-secondary-1">
                         <iframe src="{{ dashboard_urls.Tráfego_diário }}"></iframe>
