refactor: Refatorando script de criação de dashboard.

--- a/django_backend/accounts/templates/home/index.html
+++ b/django_backend/accounts/templates/home/index.html
@@ -44,7 +44,7 @@
                         <iframe src="{{ dashboard_urls.Tempo_logado }}" width="100%" height="600" frameborder="0" ></iframe>
                     </div>
                     <div class="dashboard-item dashboard-secondary-1">
-                        <iframe src="{{ dashboard_urls.Tráfego_diário }}"></iframe>
+                        <iframe src="{{ dashboard_urls.Usuários_registrados_hoje }}"></iframe>
                     </div>
                     <div class="dashboard-item dashboard-secondary-2">
                         <iframe src="{{ dashboard_urls.Usuários_Ativos_nos_Últimos_10_Minutos }}"></iframe>
