--- a/django_backend/accounts/templates/login/index.html
+++ b/django_backend/accounts/templates/login/index.html
@@ -20,7 +20,7 @@
         <form method="post">
             {% csrf_token %}
             <div class="form-group">
-                <label for="email">email:</label>
+                <label for="email">Email:</label>
                 <input type="text" id="email" name="email" placeholder="Enter your email" required>
             </div>
             <div class="form-group">
@@ -31,7 +31,10 @@
                 <button type="submit" class="btn">Login</button>
             </div>
         </form>
-        <p class="form-footer">Don't have an account? <a href="{% url 'register' %}">Register here</a></p>
+        <p class="form-footer">
+            Forgot your password? <a href="{% url 'password_reset' %}">Recover it here</a>
+        </p>
+        <p class="form-footer">Don't have an account? <a href="{% url 'register' %}">Sign up here</a></p>
     </div>
 </body>
 </html>
