--- a/django_backend/accounts/templates/password-reset-done/index.html
+++ b/django_backend/accounts/templates/password-reset-done/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Solicitação Enviada</title>
+    <title>Request Sent</title>
 </head>
 <body>
     <div class="form-container">
-        <h1>Verifique seu e-mail</h1>
-        <p>Um link de redefinição foi enviado para seu endereço de e-mail, se ele estiver cadastrado.</p>
+        <h1>Check Your Email</h1>
+        <p>A reset link has been sent to your email address, if it is registered.</p>
         <div class="form-footer">
-            <a href="{% url 'login' %}">Voltar ao login</a>
+            <a href="{% url 'login' %}">Back to login</a>
         </div>
     </div>
 </body>
