--- a/django_backend/accounts/templates/home/index.html
+++ b/django_backend/accounts/templates/home/index.html
@@ -1,6 +1,6 @@
 {% load static %}
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,14 +19,14 @@
     <div class="sidebar">
         <h2>Menu</h2>
         <ul>
-            <li><strong>Nome:</strong> {{ user.firstName }} {{ user.lastName }}</li>
-            <li><strong>E-mail:</strong> {{ user.email }}</li>
+            <li><strong>Name:</strong> {{ user.firstName }} {{ user.lastName }}</li>
+            <li><strong>Email:</strong> {{ user.email }}</li>
         </ul>
         <form method="POST">
             {% csrf_token %}
             <ul>
                 <li>
-                    <button name="logout" id="logout" type="submit" class="form-button">Sair</button>
+                    <button name="logout" id="logout" type="submit" class="form-button">Logout</button>
                 </li>
             </ul>
         </form>
@@ -34,7 +34,7 @@
 
     <div class="main-content">
         <header>
-            <h1>Bem-vindo ao Feed Analyze</h1>
+            <h1>Welcome to Feed Analyze</h1>
         </header>
         <main>
             <section>
@@ -53,7 +53,7 @@
             </section>
         </main>
         <footer>
-            <p>&copy; 2023 Feed Analyze. Todos os direitos reservados.</p>
+            <p>&copy; 2025 Feed Analyze. All rights reserved.</p>
         </footer>
     </div>
 </body>
