--- a/django_backend/accounts/templates/password-reset-complete/index.html
+++ b/django_backend/accounts/templates/password-reset-complete/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <title>Password Reset</title>
+    <title>Senha redefinida</title>
 </head>
 <body>
     <div class="form-container">
-        <h1>Password Changed Successfully</h1>
-        <p>You can now log in with your new password.</p>
+        <h1>Senha alterada com sucesso</h1>
+        <p>Você pode agora fazer login com sua nova senha.</p>
         <div class="form-footer">
-            <a href="{% url 'login' %}">Go to Login</a>
+            <a href="{% url 'login' %}">Ir para o login</a>
         </div>
     </div>
 </body>
