--- a/django_backend/accounts/templates/password-reset/index.html
+++ b/django_backend/accounts/templates/password-reset/index.html
@@ -1,24 +1,24 @@
 {% load static %}
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <title>Password Recovery</title>
+    <title>Recuperar Senha</title>
     <link rel="stylesheet" href="{% static 'styleLogin.css' %}">
 </head>
 <body>
     <div class="form-container">
-        <h1>Password Recovery</h1>
+        <h1>Recuperar Senha</h1>
         <form method="POST">
             {% csrf_token %}
             <div class="form-group">
-                <label for="email">Enter your registered email:</label>
+                <label for="email">Digite seu e-mail cadastrado:</label>
                 <input type="email" name="email" required id="email">
             </div>
-            <button type="submit" class="btn">Send reset link</button>
+            <button type="submit" class="btn">Enviar link de redefinição</button>
         </form>
         <div class="form-footer">
-            <p>Remember your password? <a href="{% url 'login' %}">Back to login</a></p>
+            <p>Lembrou a senha? <a href="{% url 'login' %}">Voltar ao login</a></p>
         </div>
     </div>
 </body>
